Fix admin bar on mobile

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -1151,3 +1151,9 @@ Select2
 body.admin-bar {
 	position: relative;
 }
+
+#wpadminbar {
+	@media screen and (max-width: 600px) {
+		top:-46px;
+	}
+}
